<resources>
    <string name="app_name">loginsdk</string>
    <string name="text_login_way">로그인 방식을 선택하세요</string>
    <string name="text_login_agreement">我已经详细阅读并同意游戏用户协议和隐私政策</string>
    <string name="text_privacy">개인정보 수집/이용 동의상세</string>
    <string name="text_user_privacys">隐私政策</string>
    <string name="text_agreement">게임 이용 약관 동의</string>
    <string name="text_user_agreement">用户协议</string>
    <string name="text_login">로그인</string>
    <string name="text_facebook">Facebook &#160;계정으로 로그인</string>
    <string name="text_google">Google&#160;계정으로 로그인</string>
    <string name="text_user_privacy">게임 이용 약관 및 개인정보 수집/이용 동의</string>
    <string name="text_into_game">동의</string>
    <string name="facebook_test_app_id">336966757143644</string>
    <string name="fb_login_test_protocol_scheme">10e2be01b323f2c4d7b5c408b534946d</string>
    <string name="text_parameter_error">参数错误</string>
    <string name="text_login_failed">로그인 실패, 다시 시도하시겠습니까?	</string>
</resources>
