<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_280"
    android:layout_height="@dimen/dp_200"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_login"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/text_login_way"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/sp_10" />

    <LinearLayout
        android:id="@+id/lyt_login_failed"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_13"
        android:background="@drawable/layout_white_corner"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_11"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/error" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/text_login_failed"
            android:textColor="@color/colorBlack"
            android:layout_marginEnd="@dimen/dp_20"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>



</LinearLayout>
