<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_280"
    android:layout_height="@dimen/dp_200"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_22"
        android:gravity="center"
        android:text="@string/text_user_privacy"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_17"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/ckb_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/bg_checkbox_one"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_11"
            android:gravity="center"
            android:text="@string/text_agreement"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_19"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/ckb_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/bg_checkbox_one"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_11"
            android:gravity="center"
            android:text="@string/text_privacy"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_into_game"
        android:layout_width="@dimen/dp_96"
        android:layout_height="@dimen/dp_35"
        android:layout_gravity="center"
        android:background="@drawable/btn_corner"
        android:text="@string/text_into_game"
        android:layout_marginBottom="@dimen/dp_10"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_10" />

</LinearLayout>
